--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
