--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.24.0",
     "@hookform/resolvers": "^3.3.1",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.5.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -32,10 +32,10 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.279.0",
-    "next": "13.5.2",
+    "next": "^13.5.6",
     "next-cloudinary": "^4.22.0",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.30",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
@@ -51,6 +51,6 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "prisma": "^5.3.1"
+    "prisma": "^5.5.0"
   }
 }
