--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "debug": "^4.3.4",
     "lucide-react": "^0.279.0",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
@@ -41,6 +42,7 @@
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.8.0",
     "stripe": "^13.7.0",
+    "supports-color": "^8.1.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
