--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "debug": "^4.3.4",
     "lucide-react": "^0.279.0",
     "next": "^13.5.6",
